manifests/qa/ms-artificial-intelligence-core.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-artificial-intelligence-core-qa
  namespace: qa
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "api-key-auth"
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /qa/ai-core
        pathType: Prefix
        backend:
          service:
            name: ms-artificial-intelligence-core
            port:
              number: 80
